--- a/index.html
+++ b/index.html
@@ -252,7 +252,26 @@
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
+<!-- FACE VIDEO BLOCK START -->
+<div style="text-align:center; margin:40px auto 10px; max-width:720px;">
+  <h2 style="font-size:1.4rem; font-weight:800; margin-bottom:14px;">
+  Kurz persönlich: Warum ich das gebaut habe (50 Sek.)
+</h2>
+</div>
 
+<div class="video-wrapper">
+  <div class="video-container">
+    <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/xoDJhzY9uPc?si=kVHHscrvU4k-NE6R"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
+<!-- FACE VIDEO BLOCK END -->
       <p class="hero-subtext" style="font-size: 1.3rem;">
         Verstehen ist der erste Schritt
       </p>
@@ -568,5 +587,6 @@ display:flex;align-items:center;justify-content:center;font-weight:700;color:#11
   <!-- COOKIE BANNER END -->
 
 </body>
+
 
 </html>
